# lilac

./: .gitignore  Cargo.toml  TODO.md
src/: lib.rs  main.rs
src/render/: mod.rs
src/tui/: mod.rs
